--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
 <body>
   <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-md-12">
+    <div class="article">
+      <div class="col-xs-14 col-md-14">
         <h1>Poverty and Obesity</h1>
         <!-- <h1>D3 Dabbler</h1> -->
         <p>Correlations Discovered Between Key Socio-Demographic Factors Among US States</p>
       </div>
     </div>
-    <div class="row">
-      <div class="ol-xs-12 col-md-12">
+    <div class="article">
+      <div class="col-xs-14 col-md-14">
         <div id="scatter">
           <!-- We append our chart here. -->
         </div>
